--- a/src/app-frontend/sass/components/_modal.scss
+++ b/src/app-frontend/sass/components/_modal.scss
@@ -1,5 +1,22 @@
 // Modal, Bootstrap
 
+.button-modal-close {
+  color: $gray-4;
+  float: right;
+  border: 0;
+  margin-right: -1.5rem;
+  font-size: $modal-font-size;
+  margin-top: -1.0rem;
+  padding-right: 1.0rem;
+  padding-left: 1rem;
+  &:hover,
+  &:active,
+  &:focus {
+    background-color: transparent;
+    color: $gray-5;
+  }
+}
+
 .modal-dialog {
   position: relative;
   max-width: $modal-width;
