--- a/src/app-frontend/sass/main.scss
+++ b/src/app-frontend/sass/main.scss
@@ -1,45 +1,55 @@
-@import "../node_modules/leaflet/dist/leaflet.css";
-@import "./main.css";
-
 /* * * *
  * Utilities
  * No css should output from these
  * * * */
-// @import
-//   'utils/functions',
-//   'utils/variables',
-//   'utils/mixins',
-//   'utils/clearfix',
-//   'utils/utilities';
+@import
+  'utils/functions',
+	'utils/variables',
+	'utils/mixins',
+  'utils/clearfix',
+  'utils/utilities';
 
-// @import url('../fonts/fontello/css/mantle.css');
+@import url('../fonts/fontello/css/mantle.css');
 
 /* * * *
  * Vendors imports
  * * * */
-// @import '../node_modules/react-select/dist/react-select.css';
+@import
+  '../node_modules/leaflet/dist/leaflet.css',
+  '../node_modules/normalize.css/normalize.css',
+  '../node_modules/@blueprintjs/core/dist/blueprint.css';
 
 /* * * *
  * Base boilerplate styling
  * * * */
-// @import
-//   'base/normalize',
-//   'base/base';
+@import
+  'base/normalize',
+	'base/base';
 
 /* * * *
  * Layout and overall structure
  * * * */
-// 'layout/content',
-// 'layout/results',
-
-// @import
-//  'layout/selection',
-//   'layout/main',
-//   'layout/intro',
-//   'layout/typography';
+@import
+  'layout/content',
+  'layout/typography';
 
 /* * * *
  * Components styling
  * * * */
-// @import
-//   'components/map';
+@import
+  'components/button',
+  'components/table',
+  'components/sidebar',
+  'components/dropdown',
+  'components/loading',
+  'components/alert',
+  'components/popover',
+  'components/tooltip',
+  'components/modal',
+  'components/map';
+
+/* * * *
+ * Page specific styling
+ * * * */
+@import
+  'pages/demo';
