--- a/src/app-frontend/sass/pages/_demo.scss
+++ b/src/app-frontend/sass/pages/_demo.scss
@@ -10,7 +10,7 @@
       border: 0;
       float: left;
       border-radius: 0;
-      color: #fff;
+      color: #f5f8fa;
       background-color: #465256;
       &:first-child {
         border-radius: 3px 0 0 3px;
@@ -19,7 +19,7 @@
         border-radius: 0 3px 3px 0;
       }
       &.active {
-        background-color: #20BEBF;
+        background-color: $brand-primary;
       }
     }
   }
@@ -37,11 +37,15 @@
     z-index: 2000;
 
     .option-section {
-      margin-bottom: 2rem;
+      padding: 1.5rem 1rem 0 1rem;
+      margin: 0 -1rem 1.5rem -1rem;
+      &:not(:first-child) {
+        border-top: 1px solid #404344;
+      }
     }
 
     label {
-      margin-bottom: 0.2rem;
+      margin-bottom: 0.4rem;
       display: block;
     }
   }
@@ -69,14 +73,14 @@
   label,
   .label {
     display: block;
+    opacity: 0.8;
     &.primary {
-      opacity: 0.8;
+      margin-bottom: 1rem;
     }
     &.secondary {
-      opacity: 0.6;
-      font-size: 1.1rem;
+      font-size: 1rem;
       text-transform: uppercase;
-      margin-top: 0.6rem;
+      margin-top: 1.6rem;
     }
   }
   .analyze-result {
@@ -121,7 +125,7 @@
   top: 0;
   margin-top: 1rem;
   z-index: 2500;
-  color: #fff;
+  color: #f5f8fa;
   padding: 0.6rem 1rem;
   font-size: 1.8rem;
   border: 0;
@@ -147,7 +151,8 @@ header {
     }
   }
   .analyze & {
-    padding: 1rem;
+    padding: 1.4rem 1rem;
+
     .button-cancel {
       position: absolute;
       right: 1rem;
@@ -156,7 +161,7 @@ header {
       background-color: transparent;
       border: 0;
       & > .icon-cancel {
-        color: #fff;
+        color: #f5f8fa;
       }
     }
   }
@@ -167,27 +172,30 @@ header {
 // which are styled via blueprint's css
 
 .main-tabs {
-  background-color: #465256;
   @include clearfix;
+  border-bottom: 2px solid rgb(64, 67, 68);
 }
 
 .pt-tab {
-    width: 50%;
-    float: left;
-    padding: 1rem;
-    overflow: hidden;
-    white-space: nowrap;
+  float: left;
+  padding: 0;
+  margin: 1rem;
+  overflow: hidden;
+  white-space: nowrap;
+  padding-bottom: 1.2rem;
+  margin-bottom: 0;
 
-    &[aria-selected="true"] {
-        background-color: #1D2123;
-        font-weight: $heading-font-weight;
-        border-radius: 0;
-        box-shadow: inset 0 -3px 0 #106ba3;
-    }
-    &:not([aria-selected="true"]) {
-        color: #B5BABB;
-        cursor: pointer;
-    }
+  &[aria-selected="true"] {
+    background-color: #1D2123;
+    font-weight: $heading-font-weight;
+    border-radius: 0;
+    box-shadow: 0 2px #20bebf !important;
+  }
+
+  &:not([aria-selected="true"]) {
+    color: #B5BABB;
+    cursor: pointer;
+  }
 }
 
 #map1 {
@@ -198,4 +206,70 @@ header {
   top: 0;
   left: 30rem;
   z-index: 1000;
+}
+
+.draw-buttons {
+  padding: 0 1rem;
+}
+
+.pt-dark {
+  .pt-slider-progress {
+    background-color: $brand-primary;
+  }
+
+  .pt-tab[aria-selected="true"], .pt-tab:not([aria-disabled="true"]):hover {
+    color: #f5f8fa;
+  }
+
+  .pt-tab:not(:last-of-type) {
+    margin-right: 0;
+  }
+
+  .pt-tab-indicator {
+    display: none !important;
+  }
+
+  .pt-tab {
+    outline: none;
+    font-size: inherit !important;
+    &:not(:last-of-type) {
+        margin-right: 0.6rem;
+    }
+    &[aria-selected="true"] span {
+      background-color: #1D2123;
+      font-weight: 800;
+      border-radius: 0;
+    }
+  }
+
+  .pt-button {
+    background: transparent !important;
+    background-color: #465256 !important;
+    color: #f5f8fa !important;
+    font-size: inherit !important;
+    min-height: 32px;
+    line-height: 32px;
+    &.pt-active {
+      background-color: $brand-primary !important;
+      font-weight: 600 !important;
+    }
+  }
+
+  .pt-slider-track {
+    background-color: #465256;
+  }
+
+  .pt-slider-handle {
+    background: transparent;
+    background-color: #DAE9F0;
+    border-radius: 100%;
+    &:hover, &.pt-active {
+      background-color: darken(#DAE9F0, 10%);
+    }
+  }
+
+  .pt-tab-panel {
+      margin-top: 0px;
+  }
+
 }
