--- a/src/app-frontend/sass/pages/_demo.scss
+++ b/src/app-frontend/sass/pages/_demo.scss
@@ -94,6 +94,10 @@
       font-size: 1.3rem;
     }
   }
+  .analyze-spinner {
+      text-align: center;
+      margin-top: 10rem;
+  }
 }
 
 .analyze-number {
